--- a/src/globalAssets/globaltail.css
+++ b/src/globalAssets/globaltail.css
@@ -1,8 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 /* Fontes */
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;00&display=swap');
 
 /* Variáveis CSS (presentes no arquivo 'tailwind.config.js') */
 :root {
@@ -16,10 +17,15 @@
     --shadow-caixainput: 0px 4px 10px rgba(0, 0, 0, 0.15);
 }
 
+
+
 /* Classes Personalizadas */
 
-font-custom {
-    font-family: 'Outfit';
+/* Valores padrões */
+@layer base {
+    html {
+        font-family: 'Outfit', sans-serif;
+    }
 }
 
 .redBtn {
@@ -28,7 +34,7 @@ font-custom {
     border: none;
     border-radius: .4375rem;
     font-size: .9375rem;
-    font-weight: 600;
+    font-weight: 400;
     cursor: pointer;
     box-shadow: 0rem .25rem .625rem rgba(0, 0, 0, 0.15);
     padding: 10px 25px;
@@ -53,18 +59,9 @@ font-custom {
 
 .backgroundContainer {
   width: 80%;
-  margin: 0 auto; 
+  margin: 30px auto; 
   background-color: #F8F8F8;
   border-radius: 15px;
   box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
   padding: 30px;
 }
-
-/* 
-.backgroundContainer {
-    width: 60%;
-    background-color: #F8F8F8;
-    border-radius: 15px;
-    box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
-    padding: 30px 30px;
-} */
